Eliminate SonarQube warnings